# nexplorer

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: filetypes.toml
src/: file_explorer.rs  generated_test.rs  gpt_client.rs  lib.rs  magic.rs  main.rs  utils.rs
src/gpt_client/: mod.rs
src/tests/: mod.rs
