[package]
name = "nexplorer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
mime_guess = "2.0"
walkdir = "2.4"
dotenv = "0.15"
humansize = "2.1"
async-trait = "0.1"
ignore = "0.4.23"
regex = "1.10.2"
tempfile = "3.8"
